fixed issue where nav menu wasn't clickable, by raising its z-index when the hamburger button is clicked

--- a/style.css
+++ b/style.css
@@ -156,6 +156,10 @@ img {
   color: var(--clr-highlight);
 }
 
+.above {
+  z-index: 10;
+}
+
 a .fas {
   padding-right: .5em;
 }
